--- a/package.json
+++ b/package.json
@@ -52,7 +52,8 @@
   "dependencies": {
     "antd": "^2.5.3",
     "react": "^15.4.1",
-    "react-dom": "^15.4.1"
+    "react-dom": "^15.4.1",
+    "react-router": "^3.0.0"
   },
   "scripts": {
     "start": "node scripts/start.js",
